--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,14 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: rgb(68, 68, 68);
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
     font-family: 'VT323', monospace;
     color: white;
+    background-color: rgb(68, 68, 68);
 }
 
 a, h1, p {
@@ -36,11 +37,15 @@ p {
     display: flex;
     justify-content: center;
     gap: 32px;
-    margin: 1.5rem 0;
+    margin-bottom: 1.5rem;
 }
 
 label {
     font-size: 1.25rem; 
     line-height: 1.75rem;
     letter-spacing: 0.1rem;
+}
+
+footer {
+    text-align: center;
 }
